[gd_scene load_steps=7 format=3 uid="uid://dhcypk5xdp3rx"]

[ext_resource type="Script" uid="uid://e8r1gmqwvgso" path="res://Scenes/Entities/Test_box/test_box.gd" id="1_0wvt8"]
[ext_resource type="Texture2D" uid="uid://bxy2d10l78a2b" path="res://Assets/Images/icon.svg" id="1_ypdc7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ufqto"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t8out"]
albedo_texture = ExtResource("1_ypdc7")

[sub_resource type="BoxMesh" id="BoxMesh_otkwc"]
material = SubResource("StandardMaterial3D_t8out")

[sub_resource type="BoxShape3D" id="BoxShape3D_qt5w6"]
size = Vector3(2, 2, 2)

[node name="TestBox" type="Node3D"]
script = ExtResource("1_0wvt8")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_ufqto")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_otkwc")
skeleton = NodePath("../..")

[node name="PickUpRange" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickUpRange"]
shape = SubResource("BoxShape3D_qt5w6")

[connection signal="input_event" from="StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="area_entered" from="PickUpRange" to="." method="_on_pick_up_range_area_entered"]
[connection signal="area_exited" from="PickUpRange" to="." method="_on_pick_up_range_area_exited"]
